Create controller/trails, create routes/trails and create models/trails, connect server to trail route and  Add welcome message to users

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,10 @@
       >
     </div>
   <% } %>
+
+  <div>
+    <p>If you want to add a trail click here</p>
+  </div>
 </main>
 
 <%- include('./partials/footer') %>
