Define an index functiinside controllers to render an index view, create basic styles for trails

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,11 +10,16 @@
         alt="<%= user.profile.name %> avatar"
       >
     </div>
+    
   <% } %>
 
   <div>
-    <p>If you want to add a trail click here</p>
+    <h2><a href="/trails">All Trails</a></h2>
   </div>
+  <div id = "background-image">
+    
+
+</div>
 </main>
 
 <%- include('./partials/footer') %>
