--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 html {
-  box-sizing: border-box
+  box-sizing: border-box;
+  
 }
 
 /* The Universal Selector */
@@ -41,4 +42,26 @@ main {
 
 h1 {
   font-size: 3.6rem;
+}
+
+
+#background-image{
+  background-image: url("https://images.unsplash.com/photo-1604677657548-4ced0c4f40c6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1131&q=80");
+  width:80%;
+  height:700px;
+  background-size: cover;
+
+  color:red;
+}
+
+#trail-1{
+  height:200px;
+  width:200px;
+  background-image: url("https://images.unsplash.com/photo-1440186347098-386b7459ad6b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80");
+  background-size: cover;
+
+}
+
+a{
+  font-size:20px;
 }
