--- a/views/trails/index.ejs
+++ b/views/trails/index.ejs
@@ -12,8 +12,14 @@
   <label for="comments">Comment</label>
     <input type="text" name ="comments">
   <%# This is a link to attach a new picture and comments %> 
-   <a href="">Create a new trail</a>
-   
+   <a href="/trails/new">Create a new trail</a>
+
+   <% trail.forEach(element => { %>
+    <h1><%= element.content %> </h1>
+   <% }) %>
+ 
+
+  <h1>hellllllo</h1>
 </main>
 
 
