--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -10,8 +10,11 @@
 in the index vies %> 
 
 <form action="/trails" method="POST">
-  <label for="comments">Comments</label>
-<textarea name="comments" id="" cols="30" rows="10"></textarea>
+  <label for="review">Comments</label>
+<textarea name="review" id="" cols="30" rows="10" required></textarea>
+<input type="number" name="rating">
+
+
 <button type="submit">Submit</button>
 </form>
 
