update the trails info

--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -7,7 +7,11 @@
 <% trail.content.forEach(info => { %>
  <h1><%= info.review %> </h1>
  <h1><%= info.rating %> </h1>
+ 
+ 
 <% }) %>
+<h1><%= trail._id %> </h1>
+<h1>edit the trail<a href="/trails/<%= trail._id %>/edit">edit</a> </h1>
 
 </main>
 
