--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -8,7 +8,7 @@
 
 <%# The created comment needs to be posted 
 in the index vies %> 
-
+<h1><%= user.profile.name %> </h1>
 <form action="/trails" method="POST">
   <label for="review">Comments</label>
 <textarea name="review" id="" cols="30" rows="10" required></textarea>
