Enable sign in create and edit post and use 'populate' to embed the creator of the review

--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -10,7 +10,11 @@
  
  
 <% }) %>
-<h1><%= trail._id %> </h1>
+
+
+  <h1>The creater is <%= trail.boss.name %> </h1>
+
+<h1>trail id <%= trail._id %> </h1>
 <h1>edit the trail<a href="/trails/<%= trail._id %>/edit">edit</a> </h1>
 <form action="/trails/<%= trail._id %>?_method=DELETE" method="POST">
   <button method="post">Delete</button>
