--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -1,21 +1,23 @@
 <%- include('../partials/html-head') %>
 <%- include('../partials/nav') %>
 
-<main>
+<main class="container">
   <h1><%= title %> </h1>
-
-</main>
-
-<%# The created comment needs to be posted 
+  <%# The created comment needs to be posted 
 in the index vies %> 
 <h1><%= user.profile.name %> </h1>
 <form action="/trails" method="POST">
   <label for="review">Comments</label>
 <textarea name="review" id="" cols="30" rows="10" required></textarea>
 <input type="number" name="rating">
-
+<input type="text" name="name">
+<input type="text" name="place">
 
 <button type="submit">Submit</button>
 </form>
+
+</main>
+
+
 
 <%- include('../partials/footer') %>
