Change the form post method to multipart/form-data and install multer, register to cloudinary and assign cloudinary keys to .env files

--- a/views/trails/index.ejs
+++ b/views/trails/index.ejs
@@ -17,7 +17,7 @@
 
     <% trail.forEach(element => { %>
       <% element.content.forEach(subelement => { %>
-        <div id="trails-individual">
+        <div id="trails-individual"class="card">
           <p><%= subelement.review %> <%= subelement.rating %> </p> <a href="/trails/<%= element._id %> ">details</a>
         </div>
         
