--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -6,12 +6,16 @@
   <%# The created comment needs to be posted 
 in the index vies %> 
 <h1><%= user.profile.name %> </h1>
-<form action="/trails" method="POST">
+<form action="/trails" method="POST" enctype="multipart/form-data">
   <label for="review">Comments</label>
 <textarea name="review" id="" cols="30" rows="10" required></textarea>
+<label for="rating">Rating</label>
 <input type="number" name="rating">
+<label for="name">Name</label>
 <input type="text" name="name">
+<label for="place">Location</label>
 <input type="text" name="place">
+<input type="file" name="image">
 
 <button type="submit">Submit</button>
 </form>
