--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -3,7 +3,9 @@
 
 
 <main class="container">
- <h1><%= title %></h1>  
+ <h1><%= title %></h1>
+ <div class="container-sm"><img src="<%= trail.image %> " alt=""></div>  
+ 
 
  <h1>Trail Title:<%= trail.name %> </h1>
  <h2>Trail place:<%= trail.place %> </h1>
