--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,19 +74,29 @@ input{
 }
 
 #display-trails-index{
-  width:800px;
+  width:100vw;
   height:500px;
   
   display:flex;
+  flex-wrap: wrap;
   
-  justify-content: space-around;
-  align-items: center;
+  justify-content: space-evenly;
+  
+}
+.index-img{
+  width: 30%;
+  
+ 
+}
+.index-img img{
+  width:100%;
+  height: 100%;
+  
 }
 
 #trails-individual{
   background-color: blanchedalmond;
-  width:100px;
-  height:100px;
+  margin-left: 100px;
 }
 
 .container-sm{
