--- a/views/trails/index.ejs
+++ b/views/trails/index.ejs
@@ -19,7 +19,7 @@
       <% element.content.forEach(subelement => { %>
 
         <div id="trails-individual"class="card">
-          <p> <%= subelement.rating %> </p> <a href="/trails/<%= element._id %> ">details</a>
+          <p> <%= subelement.rating %> </p> <a href="/trails/<%= element._id %> ">Details</a>
         </div>
         
         
