--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -34,9 +34,9 @@
   </div>
 
 
-<div class=" place-info">Location: <%= trail.place %> </div>
+<div class=" place-info"><b>Location:</b> <%= trail.place %> </div>
 
-  <div class=" credit-info">Credits: <%= trail.boss.name %> </div>
+  <div class=" credit-info"><b>Credits:</b> <%= trail.boss.name %> </div>
   
 
 <div class="card edit-info"><a href="/trails/<%= trail._id %>/edit">Edit</a> </div>
