--- a/public/stylesheets/siwg.css
+++ b/public/stylesheets/siwg.css
@@ -1,9 +1,12 @@
 .siwg {
-  background: url(/images/auth/google/siwg_light_normal.png);
+  background: url(/images/auth/google/ggsmall.png);
   cursor: pointer;
   border: none;
-  width: 191px;
-  height: 46px;
+  width: 46px;
+  height: 25px;
+  margin-left: 20px;
+  border:3px solid rgb(24, 226, 118);
+  border-radius: 3px;
 }
 
 .siwg-link {
