--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -38,11 +38,15 @@
 
   <div class=" credit-info"><b>Credits:</b> <%= trail.boss.name %> </div>
   
+<% if(trail.boss.equals(user.profile._id)){%>
+  <div class="card edit-info"><a href="/trails/<%= trail._id %>/edit">Edit</a> </div>
+  <form action="/trails/<%= trail._id %>?_method=DELETE" method="POST">
+    <button method="post">Delete</button>
+  </form>
+  
+<%} %> 
 
-<div class="card edit-info"><a href="/trails/<%= trail._id %>/edit">Edit</a> </div>
-<form action="/trails/<%= trail._id %>?_method=DELETE" method="POST">
-  <button method="post">Delete</button>
-</form>
+
 </main>
 
 
