Fix a bug that erros out when non user goes to show page

--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -38,6 +38,8 @@
 
   <div class=" credit-info"><b>Credits:</b> <%= trail.boss.name %> </div>
   
+<% if(user){ %> 
+
 <% if(trail.boss.equals(user.profile._id)){%>
   <div class="card edit-info"><a href="/trails/<%= trail._id %>/edit">Edit</a> </div>
   <form action="/trails/<%= trail._id %>?_method=DELETE" method="POST">
@@ -46,7 +48,7 @@
   
 <%} %> 
 
-
+<% }%>
 </main>
 
 
