Create comments with comment schema

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,10 +20,12 @@ html {
 
 body {
   background-color: gray;
+  background-image: url("https://images.unsplash.com/photo-1558481795-7f0a7c906f5e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1796&q=80");
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0;
+  
 }
 
 nav {
@@ -160,3 +162,9 @@ font-size:15px;
     padding: 10px;
     margin: 10px 0 10px 0;
     }
+   /* trail comments */
+  .comment{
+    width:300px;
+    
+    background-color: bisque;
+  }
