--- a/views/trails/index.ejs
+++ b/views/trails/index.ejs
@@ -49,7 +49,7 @@
           
           
           
-          <a href="/trails/<%= element._id %> ">Details</a>
+          <a href="/trails/<%= element._id %> "><h3 id="trail-name"><%= element.name %> </h3></a>
         </div>
         
         
