--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -2,26 +2,25 @@
 <%- include('../partials/nav') %>
 
 <main class="container">
+  <%# displa a form to create a new trail %> 
   <h1 class="trail-name" ><%= title %> <a><%= user.profile.name %></a>  </h1>
-  <%# The created comment needs to be posted 
-in the index vies %> 
+  <%# Use 'enctype' to make sure that the form can send files request to the server %> 
 
-<form action="/trails" method="POST" enctype="multipart/form-data">
-  <label id="comment-name" class="form-label" for="review">Review</label>
-<textarea class="form-control" name="review" id="" cols="10" rows="10" required></textarea>
-<label id="comment-name" class="form-label" for="rating">Rating</label>
-<input type="range" min="1" max="5" name="rating">
-<label id="comment-name" for="name">Trail's Name</label>
-<input type="text" name="name">
-<label id="comment-name" for="place">Location</label>
-<input type="text" name="place">
-<input type="file" name="image">
+      <form action="/trails" method="POST" enctype="multipart/form-data">
+        <label id="comment-name" class="form-label" for="review">Review</label>
+          <textarea class="form-control" name="review" id="" cols="10" rows="10" required></textarea>
+        <label id="comment-name" class="form-label" for="rating">Rating</label>
+          <input type="range" min="1" max="5" name="rating">
+        <label id="comment-name" for="name">Trail's Name</label>
+          <input type="text" name="name">
+        <label id="comment-name" for="place">Location</label>
+          <input type="text" name="place">
 
-<button type="submit">Submit</button>
-</form>
+          <%# Specify the file is an input  %> 
+          <input type="file" name="image">
+
+              <button type="submit">Submit</button>
+      </form>
 
 </main>
-
-
-
 <%- include('../partials/footer') %>
