--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -2,7 +2,7 @@
 <%- include('../partials/nav') %>
 
 
-<main class="container">
+<main class="container black">
   <%# Display trail name %> 
  <h1 class="trail-name"><%= trail.name %></h1>
  <%# Displat trail location %> 
