Enlarge images on inde view and assign my copyright with style changes on navbar and images

--- a/public/stylesheets/siwg.css
+++ b/public/stylesheets/siwg.css
@@ -1,12 +1,24 @@
 .siwg {
-  background: url(/images/auth/google/ggsmall.png);
+  background: url(/images/auth/google/ggbk.png);
   cursor: pointer;
   border: none;
-  width: 46px;
-  height: 25px;
+  width: 116px;
+  height: 65px;
+  border:2px solid red;
   margin-left: 20px;
-  border:3px solid rgb(24, 226, 118);
+  /* border:3px solid rgb(24, 226, 118); */
   border-radius: 3px;
+  background-size: cover;
+}
+
+
+.siwg::before{
+  content: 'Sign in GoogleBike';
+  width: 100px;
+  height: 100px;
+  font-size: larger;
+  font-weight: 900;
+  color: white;
 }
 
 .siwg-link {
