--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,11 +34,53 @@ body {
 nav {
   background-color: white;
   font-size: 1.6rem;
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: space-around;
+  align-items: center; */
+  height: 7em;
+  position: fixed;
+  
 }
 
+.nav-span-link{
+  font-size: 4em;
+  margin-right: 2em;
+  margin-left: .7em;
+  color:white;
+ 
+}
 
+.navbar>.container-fluid{
+  background-color:#34a0a4;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ff006e;
+  border-radius: 8px;
+  padding-left: 15px;
+  
+}
+/* .siwg-link{
+  width:60px;
+  height:50px;
+  border: 3px solid black;
+  margin-top: 20px;
+}
+
+.swig{
+  width: 100px;
+  height: 100px;
+} */
+
+#siwg-image{
+  width: 100%;
+  height: 100%;
+}
 
 h1 {
   font-size: 3.6rem;
@@ -84,14 +126,15 @@ input{
   
 }
 .index-img{
-  width: 20%;
-  margin:calc(10%/6)
+  width: 35%;
+  margin:calc(10%/2);
+  border: 4px goldenrod double;
   
  
 }
 .index-img img{
   width:100%;
-  height: 300px;
+  height: 440px;
   
 }
 
@@ -100,7 +143,8 @@ input{
   background-color: black;
   /* display:flex;
   justify-content: center; */
-  height:20px;
+  height:30px;
+ 
   display: flex;  
   align-items: center;
   
@@ -244,6 +288,19 @@ button:hover{
   margin-left:500px;
   margin-bottom: 10px;
   
+}
+
+
+
+.copyright{
+  width:300px;
+  height: 100px;
+  position: fixed;
+  bottom: 0;
+ left: 43.5%;
+ display: flex;
+ color: white;
+
 }
 @media screen and (max-width:1392px) {
   #trail-name{
